<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_about_us"
            android:title="@string/nav_about_us" />

        <item
            android:id="@+id/nav_commitee"
            android:icon="@drawable/ic_committee"
            android:title="@string/nav_commitee" />

        <item
            android:id="@+id/nav_cm_message"
            android:icon="@drawable/ic_cm_message"
            android:title="@string/nav_cm_message" />

        <item
            android:id="@+id/nav_event"
            android:icon="@drawable/ic_events"
            android:title="@string/nav_event" />

        <item
            android:id="@+id/nav_membership"
            android:icon="@drawable/ic_membership"
            android:title="@string/nav_membership" />

        <item
            android:id="@+id/nav_circular"
            android:icon="@drawable/ic_membership"
            android:title="@string/nav_circular" />

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_gallery"
            android:title="@string/nav_gallery" />

        <!--<item
            android:id="@+id/nav_library"
            android:icon="@drawable/ic_library"
            android:title="@string/nav_library" />-->
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_contact"
            android:title="@string/nav_contact" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_setting"
            android:title="@string/nav_logout" />

        <item
            android:id="@+id/nav_language"
            android:icon="@drawable/ic_setting"
            android:title="@string/nav_language" />

    </group>

    <!--<item android:title="Other"
        android:iconTint="@android:color/white"
        >
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>-->

</menu>
