<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_menu_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_36sdp"
            android:layout_alignParentTop="true"
            android:background="@color/transparent_black"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_16ssp"
            android:text="@string/nav_login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_menu_title"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_48sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_id"
                android:textStyle="bold"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/transparent_black"/>

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:hint="@string/please_enter_your_registered_email_address"
                android:paddingStart="@dimen/_8sdp"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:maxLines="1"
                android:textSize="@dimen/_12ssp"
                android:background="@drawable/grey_border"/>

            <TextView
                android:id="@+id/tv_password_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textStyle="bold"
                android:textSize="@dimen/_14ssp"
                android:layout_marginTop="@dimen/_16sdp"
                android:textColor="@color/transparent_black"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:hint="@string/please_enter_your_password"
                android:paddingStart="@dimen/_8sdp"
                android:inputType="textPassword"
                android:singleLine="true"
                android:maxLines="1"
                android:textSize="@dimen/_12ssp"
                android:background="@drawable/grey_border"/>


            <TextView
                android:id="@+id/tv_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:text="@string/txt_login"
                android:gravity="center"
                android:textStyle="bold"
                android:background="@drawable/blue_btn"
                android:textSize="@dimen/_14ssp"
                android:layout_marginTop="@dimen/_24sdp"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_11ssp"
                android:layout_marginTop="@dimen/_8sdp"
                android:textColor="@android:color/holo_red_light"
                android:text="Please enter your registered mail id(which is given to VCCI) and password as vcci@123. This will send a password reset link to your registered mail. Create a new password and enjoy our association."/>

            <TextView
                android:id="@+id/tv_response"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_light"
                android:layout_marginTop="@dimen/_8sdp"
                android:visibility="gone"
                android:textAlignment="center"
                android:textSize="@dimen/_12ssp"
                android:text="Your password request sent to your registered email id, please follow the steps, change your password and Login again."/>



        </LinearLayout>

    </RelativeLayout>

</FrameLayout>
