<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/rl_listing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_2sdp"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/txt_membership"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/entrepreneurs_may_opt_for_either_annual_or_life_membership"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_14ssp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_8sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:orientation="horizontal"
                        android:weightSum="4">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="2"
                            android:background="@drawable/grey_border"
                            android:gravity="left|center"
                            android:paddingLeft="@dimen/_8sdp"
                            android:text="@string/txt_description"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12ssp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:background="@drawable/grey_border"
                            android:gravity="center"
                            android:text="@string/annual_membership"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12ssp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:background="@drawable/grey_border"
                            android:gravity="center"
                            android:text="@string/life_membership"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12ssp"
                            android:textStyle="bold" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:orientation="horizontal"
                        android:weightSum="4">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="2"
                            android:background="@drawable/grey_border"
                            android:gravity="left|center"
                            android:paddingLeft="@dimen/_8sdp"
                            android:text="@string/entrance_fee"
                            android:textColor="@color/black" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:background="@drawable/grey_border"
                            android:gravity="center"
                            android:text="Rs. 500/-"
                            android:textColor="@color/black" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:background="@drawable/grey_border"
                            android:gravity="center"
                            android:text="Rs. 500/-"
                            android:textColor="@color/black" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:orientation="horizontal"
                        android:weightSum="4">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="2"
                            android:background="@drawable/grey_border"
                            android:gravity="left|center"
                            android:paddingLeft="@dimen/_8sdp"
                            android:text="@string/membership_fees"
                            android:textColor="@color/black" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:background="@drawable/grey_border"
                            android:gravity="center"
                            android:text="Rs. 1500/-"
                            android:textColor="@color/black" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:background="@drawable/grey_border"
                            android:gravity="center"
                            android:text="Rs. 11,000/-"
                            android:textColor="@color/black" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:orientation="horizontal"
                        android:weightSum="4">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="2"
                            android:background="@drawable/grey_border"
                            android:gravity="left|center"
                            android:paddingLeft="@dimen/_8sdp"
                            android:text="@string/annual_administrative_charges"
                            android:textColor="@color/black" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:background="@drawable/grey_border"
                            android:gravity="center"
                            android:text="-"
                            android:textColor="@color/black" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:background="@drawable/grey_border"
                            android:gravity="center"
                            android:text="Rs. 750/-"
                            android:textColor="@color/black" />

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/gst_as_applicable"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/vcci_currently_has_a_membership_base_of_over_1900_members"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/membership_forms"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_membership"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:padding="@dimen/_8sdp"
                    app:layout_constrainedHeight="true" />

                <TextView
                    android:id="@+id/tv_other_associations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:background="@color/grey"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/other_documents"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_14ssp"
                    android:visibility="gone" />

                <WebView
                    android:id="@+id/wv_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:padding="@dimen/_8sdp"
                    tools:ignore="WebViewLayout" />

            </LinearLayout>


        </androidx.core.widget.NestedScrollView>


    </RelativeLayout>

</FrameLayout>
